<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">ToDOタスク</string>

    <!-- リスト画面用 -->
    <string name="tv_title_list">全タスク</string>
    <string name="btn_new">新規</string>
    <!-- 編集画面用 -->
    <string name="tv_title_edit">タスク情報編集</string>
    <string name="tv_title_insert">タスク情報登録</string>
    <string name="tv_input_name">タスク名</string>
    <string name="tv_input_deadline">期限</string>
    <string name="btn_input_change">変更</string>
    <string name="tv_input_note">詳細:</string>
    <string name="btn_save">更新</string>
    <string name="btn_insert">登録</string>
    <string name="btn_back">戻る</string>
    <string name="btn_delete">削除</string>
    <string name="msg_input_name">タスク名を入れてください</string>
    <!-- オプションメニュー用 -->
    <string name="menu_all">全タスク</string>
    <string name="menu_incomplete">未完了タスクのみ</string>
    <string name="menu_finish">完了タスクのみ</string>
    <!-- コンテキストメニュー用 -->
    <string name="context_menu_title">タスク情報変更</string>

    <string name="context_menu_incomplete">未完了に変更</string>
    <string name="context_menu_finish">完了に変更</string>
    <string name="context_menu_other">その他</string>


    <string name="dateText">期限：</string>

</resources>
