<?xml version="1.0" encoding="utf-8"?>


<!--
Todoアプリ生成
リスト編集画面レイアウト
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="onBackButtonClick"
            android:text="@string/btn_back"
            android:textSize="20sp"/>-->

        <TextView
            android:id="@+id/tvTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/tv_title_edit"
            android:textSize="25sp"/>

       <!-- <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onSaveButtonClick"
            android:text="@string/btn_save"
            android:textSize="20sp"/>-->


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_input_name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etInputName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:inputType="text"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/switch1"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:clickable="true"

            android:layout_weight="0.05"
            android:textOff="完了"
            android:textOn="未完了"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/tv_input_deadline"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/etInputDeadline"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:onClick="showDatePickerDialog"
            android:textSize="24sp"/>



        <Button
            android:id="@+id/btnChange"
            android:spinnersShown="true"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/btn_input_change"
            android:textSize="25sp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tv_input_note"
        android:textSize="20sp"/>



    <EditText
        android:id="@+id/etInputNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:gravity="top"
        android:inputType="textMultiLine"/>

    <!--<Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="#FF6666"
        android:onClick="onDeleteButtonClick"
        android:text="@string/btn_delete"
        android:textSize="25sp" />-->


</LinearLayout>

